--- a/app/views/contexts/show.html.erb
+++ b/app/views/contexts/show.html.erb
@@ -2,7 +2,8 @@
 
   <!-- <h1>{{a}}</h1> -->
 
-  <h1> Context:</h1>
+  <!-- <script type='text/javascript'>var ID = <%=@id%>;</script> -->
+  <h1> Context:     </h1>
     <h2> {{information.id}}) {{information.created}} : {{information.location}} : {{information.name}}</h2>
     <h2></h2>
 
