add edition on context

--- a/app/views/contexts/index.html.erb
+++ b/app/views/contexts/index.html.erb
@@ -1,4 +1,4 @@
-<div class="home" ng-controller="ContextController">
+<!-- <div class="home" ng-controller="ContextController">
   <div>
     <h1> List of all contexts:</h1>
 
@@ -11,4 +11,4 @@
     </div>
 
   </div>
-</div>
+</div> -->
