--- a/app/views/contexts/show.html.erb
+++ b/app/views/contexts/show.html.erb
@@ -1,11 +1,11 @@
-<div class="home" ng-controller="ContextController">
+<!-- <div class="home" ng-controller="ContextController"> -->
 
   <!-- <h1>{{a}}</h1> -->
 
   <!-- <script type='text/javascript'>var ID = <%=@id%>;</script> -->
-  <h1> Context:     </h1>
+  <!-- <h1> Context:     </h1>
     <h2> {{information.id}}) {{information.created}} : {{information.location}} : {{information.name}}</h2>
-    <h2></h2>
+    <h2></h2> -->
 
   <!-- <div>
     <div class="jumbotron-surfy animated fadeIn" style="background-color: lightgrey" ng-if="contextsJson !== undefined">
@@ -16,4 +16,4 @@
       </h2>
     </div>
   </div> -->
-</div>
+<!-- </div> -->
