--- a/public/templates/contexts/context.ng.html
+++ b/public/templates/contexts/context.ng.html
@@ -1,11 +1,11 @@
 
 <div class="context">
-  <a href="#/contexts/">< Back to list of context</a>
-  <h1> Context: {{information.id}}</h1>
-    <h2> {{information.name}}</h2>
-    <h2> {{information.created}}</h2>
-    <h2> {{information.location}}</h2>
+    <a href="/#/contexts"><button>Back</button></a>
+    <h1> Context: {{context.id}}</h1>
+    <h2> {{context.name}}</h2>
+    <h2> {{context.created_at}}</h2>
+    <h2> {{context.location}}</h2>
 
-   </br></br></br></br>
+    <a href="/#/contexts/{{context.id}}/edit"><button>Edit</button></a>
 
 </div>
