--- a/public/templates/contexts/index.ng.html
+++ b/public/templates/contexts/index.ng.html
@@ -1,8 +1,8 @@
 <div class="contexts">
     <h1>List of context:</h1>
-    <ul ng-repeat="c in contexts" class="context">
+    <ul ng-repeat="context in contexts" class="context">
       <li>
-        <h2><a href="#/contexts/{{c.id}}">{{c.name}}</a></h2>
+        <h2><a href="#/contexts/{{context.id}}">{{context.name}}</a></h2>
       </li>
     </div>
 </div>
